--- a/origamid/flex copy/index.html
+++ b/origamid/flex copy/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -24,73 +25,66 @@
 
     <h1>Section Flexbox</h1>
     <section class="flex">
-        <div>
-            <div class="box" style="background-image: url(img/img1.jpg)"></div>
+
+        <div class="card">
+            <img src="img/img1.jpg" alt="">
             <p>Legenda</p>
         </div>
-        <div>
-            <div class="box" style="background-image: url(img/img2.jpg)"></div>
-            <p>Legenda</p>
-        </div><div>
-            <div class="box" style="background-image: url(img/img3.jpg)"></div>
-            <p>Legenda</p>
-        </div><div>
-            <div class="box" style="background-image: url(img/img4.jpg)"></div>
-            <p>Legenda</p>
-        </div><div>
-            <div class="box" style="background-image: url(img/img5.jpg)"></div>
-            <p>Legenda</p>
-        </div><div>
-            <div class="box" style="background-image: url(img/img6.jpg)"></div>
+        <div class="card">
+            <img src="img/img2.jpg" alt="">
             <p>Legenda</p>
         </div>
-        
+        <div class="card">
+            <img src="img/img3.jpg" alt="">
+            <p>Legenda</p>
+        </div>
+        <div class="card">
+            <img src="img/img4.jpg" alt="">
+            <p>Legenda</p>
+        </div>
+        <div class="card">
+            <img src="img/img5.jpg" alt="">
+            <p>Legenda</p>
+        </div>
+        <div class="card">
+            <img src="img/img6.jpg" alt="">
+            <p>Legenda</p>
+        </div>
+
     </section>
 
-    <h1>Section Flexbox</h1>
-    <section class="grid">
-        <div>
-            <div class="box" style="background-image: url(img/img1.jpg)"></div>
-            <p>Legenda</p>
+    <section class="grid-infos">
+
+        <div class="container">
+            <div class="contacts">
+                <h3>
+                    Contatos
+                </h3>
+                <h5>
+                    +55 92 98189.3594 <br />
+                    coelhodiana@icloud.com
+                </h5>
+                <div>
+                    <ul class="links">
+                        <li><a href="#">G.</a></li>
+                        <li><a href="#">B.</a></li>
+                        <li><a href="#">D.</a></li>
+                        <li><a href="#">L.</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="newsletter">
+                <h3>Atentos.</h3>
+                <h5>
+                    Receba todas as novidas.
+                </h5>
+                <input type="email" name="" id="mail-box">
+                <input type="button" value="Enviar" id="button">
+            </div>
         </div>
-        <div>
-            <div class="box" style="background-image: url(img/img2.jpg)"></div>
-            <p>Legenda</p>
-        </div>
-        <div>
-            <div class="box" style="background-image: url(img/img3.jpg)"></div>
-            <p>Legenda</p>
-        </div>
-        <div>
-            <div class="box" style="background-image: url(img/img4.jpg)"></div>
-            <p>Legenda</p>
-        </div>
-        <div>
-            <div class="box" style="background-image: url(img/img5.jpg)"></div>
-            <p>Legenda</p>
-        </div>
-        <div>
-            <div class="box" style="background-image: url(img/img6.jpg)"></div>
-            <p>Legenda</p>
-        </div>
-    </div>
-    <div>
-        <div class="box" style="background-image: url(img/img4.jpg)"></div>
-        <p>Legenda</p>
-    </div>
-    <div>
-        <div class="box" style="background-image: url(img/img5.jpg)"></div>
-        <p>Legenda</p>
-    </div>
-    <div>
-        <div class="box" style="background-image: url(img/img6.jpg)"></div>
-        <p>Legenda</p>
-    </div>
-    <div class="anuncio">
-        <div class="box" style="background-image: url(img/img6.jpg)"></div>
-        <p>Legenda</p>
-    </div>
-        
+
+
     </section>
 
 </body>
