--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <section class="about">
-        <h1>Hi! I'm Diana</h1>
+        <h1>Hi! I'm Name</h1>
         <p>Product Designer, front-end developer and cat lover.</p>
     </section>
 
@@ -41,27 +41,52 @@
 
         <div class="card">
             <img src="img/img1.jpg" alt="">
-            <!-- <p class="description">Legenda</p> -->
+            <p class="description">Legenda</p>
+            <div class="tags">
+                <p class="tag">UX</p>
+                <p class="tag">FRONT-END</p>
+            </div>
         </div>
         <div class="card">
             <img src="img/img2.jpg" alt="">
-            <!-- <p class="description">Legenda</p> -->
+            <p class="description">Legenda</p>
+            <div class="tags">
+                <p class="tag">UX</p>
+                <p class="tag">FRONT-END</p>
+            </div>
         </div>
         <div class="card">
             <img src="img/img3.jpg" alt="">
-            <!-- <p class="description">Legenda</p> -->
+            <p class="description">Legenda</p>
+            <div class="tags">
+                <p class="tag">UX</p>
+                <p class="tag">FRONT-END</p>
+            </div>
         </div>
         <div class="card">
             <img src="img/img4.jpg" alt="">
-            <!-- <p class="description">Legenda</p> -->
+            <p class="description">Legenda</p>
+            <div class="tags">
+                <p class="tag">UX</p>
+                <p class="tag">FRONT-END</p>
+            </div>
         </div>
         <div class="card">
             <img src="img/img5.jpg" alt="">
-            <!-- <p class="description">Legenda</p> -->
+            <p class="description">Legenda</p>
+            <div class="tags">
+                <p class="tag">UX</p>
+                <p class="tag">FRONT-END</p>
+            </div>
+
         </div>
         <div class="card">
             <img src="img/img6.jpg" alt="">
-            <!-- <p class="description">Legenda</p> -->
+            <p class="description">Legenda</p>
+            <div class="tags">
+                <p class="tag">UX</p>
+                <p class="tag">FRONT-END</p>
+            </div>
         </div>
 
     </section>
